<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/RelativeLayoutPrincipal"
    tools:context="es.jujoru.u2_ejercicio4.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            style="@style/LinearLayoutCabecera"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="165dp"
                style="@style/LinearLayoutBotonera"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button3"
                    style="@style/BotonMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botonMenu1" />

                <Button
                    style="@style/BotonMenu"
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botonMenu2"/>

                <Button
                    style="@style/BotonMenu"
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botonMenu3" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:text="CheckBox" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/LinerLayoutFormulario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewPrincipal"
                    android:id="@+id/textView4"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_principal" />

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"

                    android:text="@string/tv_nombre" />

                <EditText
                    style="@style/EditTextFormulario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    />

            </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"

                        android:text="@string/tv_apellido" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/EditTextFormulario"

                        android:ems="10"
                        android:inputType="textPersonName"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_edad" />

                    <EditText
                        style="@style/EditTextFormulario"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                         />

                </LinearLayout>

                <Button
                    style="@style/BotonFormulario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/botonFormulario" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
